--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,23 +13,23 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Medium Text"
+        android:text="@string/designTimeGroup"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <RatingBar
         android:id="@+id/ratingBarSelectedBacklog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp" />
 
-    <ListView
-        android:id="@+id/listViewToDos"
-        android:layout_width="match_parent"
+    <fragment
+        android:id="@+id/fragment1"
+        android:name="amk.classes.ListViewFragment"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/ratingBar1" >
-    </ListView>
+        android:layout_below="@+id/ratingBarSelectedBacklog"
+        android:layout_centerHorizontal="true"
+        tools:layout="@layout/fragment_main" />
 
 </RelativeLayout>
