viewing logic from the db is now working!

--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -9,7 +9,7 @@
     tools:context="amk.akbalog.MainActivity$PlaceholderFragment" >
 
     <ListView
-        android:id="@+id/listViewToDos"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
