--- a/res/layout/activity_news_view.xml
+++ b/res/layout/activity_news_view.xml
@@ -3,7 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="amk.akbalog.NewsActivity"
+    tools:context="amk.akbalog.NewsViewActivity"
     tools:ignore="MergeRootFrame" >
 
     <TextView
@@ -11,18 +11,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="@string/newsTitle"
+        android:text="@string/designTimeGroup"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <ListView
-        android:id="@android:id/list"
+    <WebView
+        android:id="@+id/webViewSportNews"
         android:layout_width="match_parent"
-        android:layout_height="316dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textViewNewsViewTitle" >
-
-    </ListView>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textViewNewsViewTitle"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
