--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/todobackground"
     android:columnCount="1"
     tools:context="amk.akbalog.MainActivity"
     tools:ignore="MergeRootFrame" >
